# opengl3

./: CMakeLists.txt
include/glad/: glad.h
src/: main.cpp
src/cpps/: ModelLoader.cpp  ShaderProgram.cpp  TextureProgram.cpp  Window.cpp
src/headers/: EnumStatus.h  ModelLoader.h  ShaderProgram.h  TextureProgram.h  Window.h
src/shaderFile/: fragmentShader.fs  vertexShader.vs
